[package]
name = "pem_command"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sign_generator"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
sha2 = "0.10"
openssl = "0.10"
rsa = "0.5"
pnet = "0.35.0"
local-ip-address = "0.6.1"
walkdir = "2.3.3"
once_cell = "1.19.0"
actix-web-actors = "4.3.0"
actix = "0.12"
image = "0.23"
base64 = "0.22.1"
actix-cors = "0.6"